--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-esc-pos-printer": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
